--- a/reserve.html
+++ b/reserve.html
@@ -109,12 +109,12 @@
   
           // If a table is available... tell user they are booked.
           if (data) {
-            alert("Yay! You are officially booked!");
+            alert("SUCCESS: You are officially booked!");
           }
   
           // If a table is available... tell user they on the waiting list.
           else {
-            alert("Sorry you are on the wait list");
+            alert("WE ARE FULL, you have been added to our waitlist");
           }
   
           // Clear the form when submitting
